--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,10 @@
 <body>
   <header class="site-header">
     <div class="container nav">
-      <a class="brand" href="{{ '/' | relative_url }}">
-        <span class="brand-mark">CF</span>
-        <span class="brand-text">{{ site.title }}</span>
-      </a>
+<a class="brand" href="{{ '/' | relative_url }}">
+  <img class="brand-logo" src="{{ '/assets/img/tiger_mascot_logo.svg' | relative_url }}" alt="Cuyahoga Falls Tiger Logo">
+  <span class="brand-text">{{ site.title }}</span>
+</a>
       <nav>
         <a href="{{ '/seniors/' | relative_url }}">Senior Directory</a>
         <a href="{{ '/vendors/' | relative_url }}">Vendors & Services</a>
